# Cats-vs-Dogs-IA

./: README.md
cats_and_dogs/: pyproject.toml
cats_and_dogs/cats_and_dogs/: app.py  model.py  report.py  settings.py  train.py
cats_and_dogs/img/: Dataset.txt
